@@ -24,15 +24,16 @@ import javax.ws.rs.core.Response;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.kie.kogito.explainability.api.CounterfactualDomainCategorical;
+import org.kie.kogito.explainability.api.CounterfactualExplainabilityRequest;
+import org.kie.kogito.explainability.api.CounterfactualExplainabilityResult;
+import org.kie.kogito.explainability.api.CounterfactualSearchDomain;
+import org.kie.kogito.explainability.api.ExplainabilityStatus;
+import org.kie.kogito.explainability.api.ModelIdentifier;
+import org.kie.kogito.explainability.api.NamedTypedValue;
 import org.kie.kogito.trusty.service.common.TrustyService;
 import org.kie.kogito.trusty.service.common.responses.CounterfactualRequestResponse;
 import org.kie.kogito.trusty.service.common.responses.CounterfactualResultsResponse;
-import org.kie.kogito.trusty.storage.api.model.CounterfactualDomainCategorical;
-import org.kie.kogito.trusty.storage.api.model.CounterfactualExplainabilityRequest;
-import org.kie.kogito.trusty.storage.api.model.CounterfactualExplainabilityResult;
-import org.kie.kogito.trusty.storage.api.model.CounterfactualSearchDomain;
-import org.kie.kogito.trusty.storage.api.model.ExplainabilityStatus;
-import org.kie.kogito.trusty.storage.api.model.TypedVariableWithValue;
 import org.mockito.Mockito;
 
 import com.fasterxml.jackson.databind.node.TextNode;
@@ -40,6 +41,8 @@ import com.fasterxml.jackson.databind.node.TextNode;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.kie.kogito.trusty.service.common.TypedValueTestUtils.buildGoalUnit;
+import static org.kie.kogito.trusty.service.common.TypedValueTestUtils.buildSearchDomainUnit;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
@@ -48,11 +51,16 @@ import static org.mockito.Mockito.when;
 public class ExplainabilityApiV1Test {
 
     private static final String EXECUTION_ID = "executionId";
+
+    private static final String SERVICE_URL = "serviceUrl";
+
     private static final String COUNTERFACTUAL_ID = "counterfactualId";
 
     private static final TrustyService trustyService = mock(TrustyService.class);
 
     private static final ExplainabilityApiV1 explainabilityEndpoint = new ExplainabilityApiV1();
+
+    private static final Long MAX_RUNNING_TIME_SECONDS = 60L;
 
     @BeforeAll
     public static void initialise() {
@@ -78,7 +86,14 @@ public class ExplainabilityApiV1Test {
 
     @Test
     public void testRequestCounterfactualsWhenExecutionDoesExist() {
-        when(trustyService.requestCounterfactuals(anyString(), any(), any())).thenReturn(new CounterfactualExplainabilityRequest(EXECUTION_ID, COUNTERFACTUAL_ID));
+        when(trustyService.requestCounterfactuals(anyString(), any(), any())).thenReturn(new CounterfactualExplainabilityRequest(EXECUTION_ID,
+                SERVICE_URL,
+                new ModelIdentifier("resourceType", "resourceIdentifier"),
+                COUNTERFACTUAL_ID,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                MAX_RUNNING_TIME_SECONDS));
 
         org.kie.kogito.trusty.service.common.requests.CounterfactualRequest request =
                 new org.kie.kogito.trusty.service.common.requests.CounterfactualRequest(Collections.emptyList(), Collections.emptyList());
@@ -92,6 +107,7 @@ public class ExplainabilityApiV1Test {
         CounterfactualRequestResponse counterfactualRequestResponse = (CounterfactualRequestResponse) entity;
         assertEquals(EXECUTION_ID, counterfactualRequestResponse.getExecutionId());
         assertEquals(COUNTERFACTUAL_ID, counterfactualRequestResponse.getCounterfactualId());
+        assertEquals(MAX_RUNNING_TIME_SECONDS, counterfactualRequestResponse.getMaxRunningTimeSeconds());
     }
 
     @Test
@@ -106,7 +122,14 @@ public class ExplainabilityApiV1Test {
     @Test
     @SuppressWarnings({ "rawtypes", "unchecked" })
     public void testGetAllCounterfactualsWhenExecutionDoesExist() {
-        when(trustyService.getCounterfactualRequests(anyString())).thenReturn(List.of(new CounterfactualExplainabilityRequest(EXECUTION_ID, COUNTERFACTUAL_ID)));
+        when(trustyService.getCounterfactualRequests(anyString())).thenReturn(List.of(new CounterfactualExplainabilityRequest(EXECUTION_ID,
+                SERVICE_URL,
+                new ModelIdentifier("resourceType", "resourceIdentifier"),
+                COUNTERFACTUAL_ID,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                MAX_RUNNING_TIME_SECONDS)));
 
         Response response = explainabilityEndpoint.getAllCounterfactualsSummary(EXECUTION_ID);
         assertNotNull(response);
@@ -120,6 +143,7 @@ public class ExplainabilityApiV1Test {
         CounterfactualRequestResponse counterfactual = counterfactualRequestResponse.get(0);
         assertEquals(EXECUTION_ID, counterfactual.getExecutionId());
         assertEquals(COUNTERFACTUAL_ID, counterfactual.getCounterfactualId());
+        assertEquals(MAX_RUNNING_TIME_SECONDS, counterfactual.getMaxRunningTimeSeconds());
     }
 
     @Test
@@ -133,18 +157,22 @@ public class ExplainabilityApiV1Test {
 
     @Test
     public void testGetCounterfactualResultsWhenExecutionDoesExist() {
-        TypedVariableWithValue goal = TypedVariableWithValue.buildUnit("unit",
+        NamedTypedValue goal = buildGoalUnit("unit",
                 "string",
                 new TextNode("hello"));
         CounterfactualSearchDomain searchDomain =
-                CounterfactualSearchDomain.buildSearchDomainUnit("unit",
+                buildSearchDomainUnit("unit",
                         "string",
                         new CounterfactualDomainCategorical(List.of(new TextNode("hello"), new TextNode("goodbye"))));
         when(trustyService.getCounterfactualRequest(anyString(), anyString()))
                 .thenReturn(new CounterfactualExplainabilityRequest(EXECUTION_ID,
+                        SERVICE_URL,
+                        new ModelIdentifier("resourceType", "resourceIdentifier"),
                         COUNTERFACTUAL_ID,
+                        Collections.emptyList(),
                         List.of(goal),
-                        List.of(searchDomain)));
+                        List.of(searchDomain),
+                        MAX_RUNNING_TIME_SECONDS));
 
         Response response = explainabilityEndpoint.getCounterfactualDetails(EXECUTION_ID, COUNTERFACTUAL_ID);
         assertNotNull(response);
@@ -155,6 +183,7 @@ public class ExplainabilityApiV1Test {
         CounterfactualResultsResponse resultsResponse = (CounterfactualResultsResponse) entity;
         assertEquals(EXECUTION_ID, resultsResponse.getExecutionId());
         assertEquals(COUNTERFACTUAL_ID, resultsResponse.getCounterfactualId());
+        assertEquals(MAX_RUNNING_TIME_SECONDS, resultsResponse.getMaxRunningTimeSeconds());
         assertEquals(1, resultsResponse.getGoals().size());
         assertEquals(goal, resultsResponse.getGoals().iterator().next());
         assertEquals(1, resultsResponse.getSearchDomains().size());
@@ -164,13 +193,12 @@ public class ExplainabilityApiV1Test {
 
     @Test
     public void testGetCounterfactualResultsWhenExecutionDoesExistAndResultsHaveBeenCreated() {
-        TypedVariableWithValue goal = TypedVariableWithValue.buildUnit("unit",
+        NamedTypedValue goal = buildGoalUnit("unit",
                 "string",
                 new TextNode("hello"));
-        CounterfactualSearchDomain searchDomain =
-                CounterfactualSearchDomain.buildSearchDomainUnit("unit",
-                        "string",
-                        new CounterfactualDomainCategorical(List.of(new TextNode("hello"), new TextNode("goodbye"))));
+        CounterfactualSearchDomain searchDomain = buildSearchDomainUnit("unit",
+                "string",
+                new CounterfactualDomainCategorical(List.of(new TextNode("hello"), new TextNode("goodbye"))));
 
         CounterfactualExplainabilityResult solution1 = new CounterfactualExplainabilityResult(EXECUTION_ID,
                 COUNTERFACTUAL_ID,
@@ -195,9 +223,13 @@ public class ExplainabilityApiV1Test {
 
         when(trustyService.getCounterfactualRequest(anyString(), anyString()))
                 .thenReturn(new CounterfactualExplainabilityRequest(EXECUTION_ID,
+                        SERVICE_URL,
+                        new ModelIdentifier("resourceType", "resourceIdentifier"),
                         COUNTERFACTUAL_ID,
+                        Collections.emptyList(),
                         List.of(goal),
-                        List.of(searchDomain)));
+                        List.of(searchDomain),
+                        MAX_RUNNING_TIME_SECONDS));
         when(trustyService.getCounterfactualResults(anyString(), anyString())).thenReturn(List.of(solution1, solution2));
 
         Response response = explainabilityEndpoint.getCounterfactualDetails(EXECUTION_ID, COUNTERFACTUAL_ID);
@@ -209,6 +241,7 @@ public class ExplainabilityApiV1Test {
         CounterfactualResultsResponse resultsResponse = (CounterfactualResultsResponse) entity;
         assertEquals(EXECUTION_ID, resultsResponse.getExecutionId());
         assertEquals(COUNTERFACTUAL_ID, resultsResponse.getCounterfactualId());
+        assertEquals(MAX_RUNNING_TIME_SECONDS, resultsResponse.getMaxRunningTimeSeconds());
         assertEquals(1, resultsResponse.getGoals().size());
         assertEquals(goal, resultsResponse.getGoals().iterator().next());
         assertEquals(1, resultsResponse.getSearchDomains().size());
@@ -217,5 +250,4 @@ public class ExplainabilityApiV1Test {
         assertEquals(solution1, resultsResponse.getSolutions().get(0));
         assertEquals(solution2, resultsResponse.getSolutions().get(1));
     }
-
 }
